Fix for user menu out of view
Fix for user menu out of view on media min-width 992px
Issue #3 on Nova Snowball repo, 
https://github.com/stephenlake/nova-snowball/issues/3

--- a/resources/css/fixed-header.css
+++ b/resources/css/fixed-header.css
@@ -19,4 +19,13 @@
   #nova .content {
     padding-top: 60px;
   }
+  .h-header {
+    padding-right: 2.2rem !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .h-header {
+    padding-right: 13rem !important;
+  }
 }
